<resources>
    <string name="app_name">StuBank</string>
    <string name="view_cards">View Cards</string>
    <string name="main_menu">Main menu</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="cards_menu">Cards</string>
    <string name="create_card_menu">Create card</string>
    <string name="account_number">Account number</string>
    <string name="card_no">User card number</string>
    <string name="toggle_card_details">Toggle card details</string>
    <string name="card_status">Card status</string>
    <string name="account_balance">BALANCE</string>
    <string name="balance_default">£0.00</string>
    <string name="account_number_default">3411-4885-6324-7195</string>
    <string name="name_default">Joe Bloggs</string>
    <string name="card_number_default">0000-0000-0000-0000</string>
    <string name="sortcode_default">11-11-11</string>
    <string name="pay">PAY</string>
    <string name="budget">BUDGET</string>
    <string name="budget_title">Budget</string>
    <string name="budget_input">Enter Budget</string>
    <string name="budget_graph">Graph</string>
    <string name="budget_pie">Pie</string>
    <string name="piechart_button">Pie</string>
    <string name="linegraph_button">Line</string>
    <string name="apply_budget">APPLY</string>
    <string name="submit">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="currency">Currency</string>
    <string name="create_card">Create card</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction_direction">IN</string>
    <string name="transaction_name">Transaction Account</string>
    <string name="transaction_amount">£0.00</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_element_date">01 Jan 2021</string>
    <string name="paymentActName">name</string>
    <string name="paymentActAccountNo">AccountNo.</string>
    <string name="paymentActSortcode">Sortcode</string>
    <string name="PaymentActButton">select</string>
    <string name="PaymentAccountTitle">Payment Accounts</string>
    <string name="submitPayact">Create new account</string>
</resources>