<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/transactionElement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="#FFFFFF"
            android:clickable="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/transactionElementAccount"
                android:layout_width="211dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/transaction_name"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/transactionElementAmount"
                android:layout_width="161dp"
                android:layout_height="45dp"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="16dp"
                android:gravity="right"
                android:text="@string/transaction_amount"
                android:textColor="@color/transaction_colour"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/transactionElementAccount" />

            <TextView
                android:id="@+id/transactionElementDate"
                android:layout_width="160dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="4dp"
                android:gravity="right"
                android:text="@string/transaction_element_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/transactionElementAccount"
                app:layout_constraintTop_toTopOf="@+id/transactionElementAmount"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>